@@ -1,4 +1,5 @@
 0.15
+ - Update Module::Install to 1.21 version.
 
 0.14 2022-09-28T18:17:25+02:00
  - Revert 0.13 version situation if key doesn't exist. It's not useful with
